Se cambia jenkinsfile para prueba

--- a/Avantick.Desktop/Avantick.Desktop.csproj
+++ b/Avantick.Desktop/Avantick.Desktop.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net9.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <Nullable>enable</Nullable>
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <ImplicitUsings>enable</ImplicitUsings>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
